// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PoolDetailsHeader > renders link for pool address 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c1 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: space-between;
  justify-content: flex-start;
}

.c2 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: flex-start;
}

.c4 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c10 {
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
  color: #FF37C7;
  stroke: #FF37C7;
  font-weight: 500;
}

.c10 :hover {
  opacity: 0.6;
}

.c10 :active {
  opacity: 0.4;
}

.c5 {
  display: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c3 {
  gap: 8px;
  margin-right: 12px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c6 {
  flex-shrink: 0;
}

.c8 {
  gap: 8px;
  padding: 8px 12px;
  border-radius: 20px;
  background-color: rgba(19, 19, 19, 0.08);
  font-size: 14px;
  font-weight: 535;
  line-height: 16px;
  width: max-content;
  flex-shrink: 0;
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c8 :hover {
  opacity: 0.6;
}

.c8 :active {
  opacity: 0.4;
}

.c9 {
  width: 16px;
  height: 16px;
  color: rgba(19, 19, 19, 0.63);
  flex-shrink: 0;
}

.c11 {
  padding: 8px;
  border-radius: 20px;
  background-color: rgba(19, 19, 19, 0.08);
  display: flex;
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c11 :hover {
  opacity: 0.6;
}

.c11 :active {
  opacity: 0.4;
}

.c7 {
  gap: 8px;
  flex-shrink: 0;
  width: max-content;
}

@media (max-width: 1024px) and (min-width: 380px) {
  .c5 {
    display: block;
  }
}

@media (max-width: 1024px) and (min-width: 380px) {
  .c6 {
    color: rgba(19, 19, 19, 0.63);
  }
}

<span
    class=""
    style="display: contents;"
  >
    <div
      align="space-between"
      class="c0 c1"
    >
      <div
        class="c0 c2 c3"
        data-testid="pdp-pool-logo-USDC-WETH"
      >
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _height-20px _width-20px"
        >
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _left-0px _overflowX-hidden _overflowY-hidden _position-absolute _top-0px _width-9px"
            data-testid="input-currency-logo-container"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-20px _justifyContent-center _pointerEvents-auto _width-20px _position-relative"
              data-testid="token-logo"
            >
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-10px _borderTopRightRadius-10px _borderBottomRightRadius-10px _borderBottomLeftRadius-10px"
              />
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                data-testid="img-token-image"
              >
                <img
                  height="20"
                  src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                  style="object-fit: contain; border-radius: 10px; z-index: 1;"
                  width="20"
                />
              </div>
            </div>
          </div>
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row-reverse _overflowX-hidden _overflowY-hidden _position-absolute _right-0px _top-0px _width-9px"
            data-testid="output-currency-logo-container"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-20px _justifyContent-center _pointerEvents-auto _width-20px _position-relative"
              data-testid="token-logo"
            >
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-10px _borderTopRightRadius-10px _borderBottomRightRadius-10px _borderBottomLeftRadius-10px"
              />
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                data-testid="img-token-image"
              >
                <img
                  height="20"
                  src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png"
                  style="object-fit: contain; border-radius: 10px; z-index: 1;"
                  width="20"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="c4 c5 css-1urox24"
        >
          Pool
        </div>
        <div
          class="c4 c6 css-1urox24"
        >
          USDC / WETH
        </div>
      </div>
      <div
        class="c0 c2 c7"
      >
        <div
          class="c0 c2 c8"
          data-testid="copy-address-0x88e6a0c2ddd26feeb64f039a2c41296fcb3f5640"
        >
          0x88e6...5640
          <svg
            class="c9"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="13"
              rx="2"
              ry="2"
              width="13"
              x="9"
              y="9"
            />
            <path
              d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
            />
          </svg>
        </div>
        <a
          class="c10"
          data-testid="explorer-url-https://etherscan.io/address/0x88e6a0c2ddd26feeb64f039a2c41296fcb3f5640"
          href="https://etherscan.io/address/0x88e6a0c2ddd26feeb64f039a2c41296fcb3f5640"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            class="c11"
          >
            <svg
              fill="#131313"
              height="16px"
              stroke="transparent"
              viewBox="0 0 18 18"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.08042 8.66148C5.08043 8.58693 5.09517 8.51313 5.12378 8.44429C5.1524 8.37546 5.19432 8.31297 5.24716 8.26038C5.30001 8.2078 5.3627 8.16617 5.43167 8.13788C5.50064 8.1096 5.57452 8.09522 5.64907 8.09557L6.59187 8.09865C6.74218 8.09865 6.88635 8.15836 6.99263 8.26465C7.09893 8.37094 7.15865 8.5151 7.15865 8.66543V12.2303C7.26478 12.1988 7.4011 12.1652 7.55026 12.1301C7.65387 12.1058 7.74621 12.0471 7.8123 11.9637C7.87839 11.8803 7.91434 11.777 7.91432 11.6705V7.24848C7.91432 7.09814 7.97403 6.95397 8.08032 6.84766C8.1866 6.74135 8.33077 6.68162 8.4811 6.68158H9.42577C9.57609 6.68162 9.72026 6.74135 9.82655 6.84766C9.93284 6.95397 9.99255 7.09814 9.99255 7.24848V11.3526C9.99255 11.3526 10.2291 11.2569 10.4595 11.1596C10.545 11.1234 10.6181 11.0629 10.6694 10.9854C10.7208 10.908 10.7482 10.8172 10.7483 10.7242V5.83152C10.7483 5.68122 10.808 5.53707 10.9143 5.43078C11.0206 5.32449 11.1647 5.26478 11.315 5.26474H12.2597C12.41 5.26474 12.5542 5.32445 12.6604 5.43075C12.7667 5.53704 12.8265 5.6812 12.8265 5.83152V9.86056C13.6455 9.267 14.4754 8.55315 15.1341 7.69474C15.2297 7.57015 15.2929 7.42383 15.3181 7.26887C15.3434 7.1139 15.3299 6.95509 15.2788 6.8066C14.9739 5.9294 14.4894 5.12551 13.856 4.44636C13.2226 3.76722 12.4544 3.22777 11.6005 2.86256C10.7467 2.49734 9.82602 2.31439 8.89742 2.32542C7.96882 2.33645 7.05275 2.54121 6.20783 2.9266C5.36291 3.31199 4.60774 3.86952 3.99066 4.56352C3.37358 5.25751 2.90817 6.07269 2.62422 6.95689C2.34027 7.84107 2.24403 8.7748 2.34166 9.69832C2.43929 10.6218 2.72863 11.5148 3.19118 12.3201C3.27176 12.459 3.39031 12.572 3.53289 12.6459C3.67548 12.7198 3.83618 12.7514 3.99614 12.7372C4.17482 12.7215 4.3973 12.6992 4.66181 12.6681C4.77695 12.655 4.88326 12.6001 4.96048 12.5137C5.0377 12.4273 5.08043 12.3155 5.08053 12.1996L5.08042 8.66148Z"
                fill="#131313"
              />
              <path
                d="M5.05957 14.3792C6.05531 15.1036 7.23206 15.5384 8.45961 15.6356C9.68716 15.7326 10.9176 15.4883 12.0149 14.9294C13.1122 14.3705 14.0334 13.519 14.6768 12.4691C15.3201 11.4191 15.6605 10.2116 15.6601 8.98024C15.6601 8.82658 15.653 8.67457 15.6428 8.52344C13.2041 12.1605 8.70139 13.8609 5.05978 14.3786"
                fill="#131313"
              />
            </svg>
          </div>
        </a>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PoolDetailsHeader > renders link for token address 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c1 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: space-between;
  justify-content: flex-start;
}

.c2 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: flex-start;
}

.c7 {
  width: 100%;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: flex-start;
  gap: 4px;
}

.c4 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c11 {
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
  color: #FF37C7;
  stroke: #FF37C7;
  font-weight: 500;
}

.c11 :hover {
  opacity: 0.6;
}

.c11 :active {
  opacity: 0.4;
}

.c5 {
  display: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c3 {
  gap: 8px;
  margin-right: 12px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c3 :hover {
  opacity: 0.6;
}

.c3 :active {
  opacity: 0.4;
}

.c6 {
  flex-shrink: 0;
}

.c9 {
  gap: 8px;
  padding: 8px 12px;
  border-radius: 20px;
  background-color: rgba(19, 19, 19, 0.08);
  font-size: 14px;
  font-weight: 535;
  line-height: 16px;
  width: max-content;
  flex-shrink: 0;
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c9 :hover {
  opacity: 0.6;
}

.c9 :active {
  opacity: 0.4;
}

.c10 {
  width: 16px;
  height: 16px;
  color: rgba(19, 19, 19, 0.63);
  flex-shrink: 0;
}

.c12 {
  padding: 8px;
  border-radius: 20px;
  background-color: rgba(19, 19, 19, 0.08);
  display: flex;
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c12 :hover {
  opacity: 0.6;
}

.c12 :active {
  opacity: 0.4;
}

.c8 {
  gap: 8px;
  flex-shrink: 0;
  width: max-content;
}

@media (max-width: 1024px) and (min-width: 380px) {
  .c5 {
    display: block;
  }
}

@media (max-width: 1024px) and (min-width: 380px) {
  .c6 {
    color: rgba(19, 19, 19, 0.63);
  }
}

<span
    class=""
    style="display: contents;"
  >
    <div
      align="space-between"
      class="c0 c1"
    >
      <div
        class="c0 c2 c3"
        data-testid="pdp-token-logo-USDC"
      >
        <div
          class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-20px _justifyContent-center _pointerEvents-auto _width-20px _position-relative"
          data-testid="token-logo"
        >
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-10px _borderTopRightRadius-10px _borderBottomRightRadius-10px _borderBottomLeftRadius-10px"
          />
          <div
            class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
            data-testid="img-token-image"
          >
            <img
              height="20"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
              style="object-fit: contain; border-radius: 10px; z-index: 1;"
              width="20"
            />
          </div>
        </div>
        <div
          class="c4 c5 css-1urox24"
        >
          USD Coin
        </div>
        <div
          class="c4 c6 css-1urox24"
        >
          <div
            class="c0 c7"
            gap="4px"
          >
            USDC 
            <svg
              fill="none"
              height="16"
              stroke="rgba(19, 19, 19, 0.63)"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="c0 c2 c8"
      >
        <div
          class="c0 c2 c9"
          data-testid="copy-address-0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
        >
          0xA0b8...eB48
          <svg
            class="c10"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="13"
              rx="2"
              ry="2"
              width="13"
              x="9"
              y="9"
            />
            <path
              d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
            />
          </svg>
        </div>
        <a
          class="c11"
          data-testid="explorer-url-https://etherscan.io/token/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
          href="https://etherscan.io/token/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            class="c12"
          >
            <svg
              fill="#131313"
              height="16px"
              stroke="transparent"
              viewBox="0 0 18 18"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.08042 8.66148C5.08043 8.58693 5.09517 8.51313 5.12378 8.44429C5.1524 8.37546 5.19432 8.31297 5.24716 8.26038C5.30001 8.2078 5.3627 8.16617 5.43167 8.13788C5.50064 8.1096 5.57452 8.09522 5.64907 8.09557L6.59187 8.09865C6.74218 8.09865 6.88635 8.15836 6.99263 8.26465C7.09893 8.37094 7.15865 8.5151 7.15865 8.66543V12.2303C7.26478 12.1988 7.4011 12.1652 7.55026 12.1301C7.65387 12.1058 7.74621 12.0471 7.8123 11.9637C7.87839 11.8803 7.91434 11.777 7.91432 11.6705V7.24848C7.91432 7.09814 7.97403 6.95397 8.08032 6.84766C8.1866 6.74135 8.33077 6.68162 8.4811 6.68158H9.42577C9.57609 6.68162 9.72026 6.74135 9.82655 6.84766C9.93284 6.95397 9.99255 7.09814 9.99255 7.24848V11.3526C9.99255 11.3526 10.2291 11.2569 10.4595 11.1596C10.545 11.1234 10.6181 11.0629 10.6694 10.9854C10.7208 10.908 10.7482 10.8172 10.7483 10.7242V5.83152C10.7483 5.68122 10.808 5.53707 10.9143 5.43078C11.0206 5.32449 11.1647 5.26478 11.315 5.26474H12.2597C12.41 5.26474 12.5542 5.32445 12.6604 5.43075C12.7667 5.53704 12.8265 5.6812 12.8265 5.83152V9.86056C13.6455 9.267 14.4754 8.55315 15.1341 7.69474C15.2297 7.57015 15.2929 7.42383 15.3181 7.26887C15.3434 7.1139 15.3299 6.95509 15.2788 6.8066C14.9739 5.9294 14.4894 5.12551 13.856 4.44636C13.2226 3.76722 12.4544 3.22777 11.6005 2.86256C10.7467 2.49734 9.82602 2.31439 8.89742 2.32542C7.96882 2.33645 7.05275 2.54121 6.20783 2.9266C5.36291 3.31199 4.60774 3.86952 3.99066 4.56352C3.37358 5.25751 2.90817 6.07269 2.62422 6.95689C2.34027 7.84107 2.24403 8.7748 2.34166 9.69832C2.43929 10.6218 2.72863 11.5148 3.19118 12.3201C3.27176 12.459 3.39031 12.572 3.53289 12.6459C3.67548 12.7198 3.83618 12.7514 3.99614 12.7372C4.17482 12.7215 4.3973 12.6992 4.66181 12.6681C4.77695 12.655 4.88326 12.6001 4.96048 12.5137C5.0377 12.4273 5.08043 12.3155 5.08053 12.1996L5.08042 8.66148Z"
                fill="#131313"
              />
              <path
                d="M5.05957 14.3792C6.05531 15.1036 7.23206 15.5384 8.45961 15.6356C9.68716 15.7326 10.9176 15.4883 12.0149 14.9294C13.1122 14.3705 14.0334 13.519 14.6768 12.4691C15.3201 11.4191 15.6605 10.2116 15.6601 8.98024C15.6601 8.82658 15.653 8.67457 15.6428 8.52344C13.2041 12.1605 8.70139 13.8609 5.05978 14.3786"
                fill="#131313"
              />
            </svg>
          </div>
        </a>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
